reports/cppcheck.txt
Checking api-endpoints/api-endpoints-lib.h ...
1/4 files checked 7% done
Checking api-endpoints/api-endpoints.cc ...
2/4 files checked 80% done
Checking api-endpoints/api-matchmaking-lib.h ...
3/4 files checked 82% done
Checking api-endpoints/api-matchmaking.cc ...
4/4 files checked 100% done
Checking authentication/auth-service.cpp ...
1/2 files checked 48% done
Checking authentication/auth-service.h ...
2/2 files checked 100% done
Checking main/db-service.cpp ...
1/3 files checked 77% done
Checking main/db-service.h ...
2/3 files checked 92% done
Checking main/main.cpp ...
3/3 files checked 100% done
Checking testing/MockAPIEndPoints.h ...
1/17 files checked 0% done
Checking testing/MockAuthService.h ...
2/17 files checked 0% done
Checking testing/MockDBService.h ...
3/17 files checked 0% done
Checking testing/test-auth-routes-integration.cpp ...
4/17 files checked 3% done
Checking testing/test-auth-routes.cpp ...
5/17 files checked 7% done
Checking testing/test-auth.cpp ...
6/17 files checked 7% done
Checking testing/test-db-integration.cpp ...
7/17 files checked 12% done
Checking testing/test-gdp-integ.cpp ...
8/17 files checked 15% done
Checking testing/test-gdp.cpp ...
9/17 files checked 19% done
Checking testing/test-get-post-games-routes-integration.cc ...
10/17 files checked 24% done
Checking testing/test-get-post-games-routes.cc ...
11/17 files checked 29% done
Checking testing/test-matchmaking-integration.cpp ...
12/17 files checked 40% done
Checking testing/test-matchmaking.cpp ...
13/17 files checked 50% done
Checking testing/test-player-endpoints 2.cpp ...
testing/test-player-endpoints 2.cpp:345:1: error: syntax error [syntaxError]
TEST_F(PlayerTestFixture, GetGamePlayersAuthTest) {
^
14/17 files checked 65% done
Checking testing/test-player-endpoints-integration 2.cpp ...
15/17 files checked 76% done
Checking testing/test-player-endpoints-integration.cpp ...
16/17 files checked 86% done
Checking testing/test-player-endpoints.cpp ...
testing/test-player-endpoints.cpp:347:1: error: syntax error [syntaxError]
TEST_F(PlayerTestFixture, GetGamePlayersAuthTest) {
^
17/17 files checked 100% done
